open it up and write out all lines (not just 10 per state)

--- a/tweeters-2013-09-15/GA.html
+++ b/tweeters-2013-09-15/GA.html
@@ -47,4 +47,235 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RouxdFoodKrewe&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RouxdFoodKrewe' target='t'>RouxdFoodKrewe</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MactheCheeseatl&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/MactheCheeseatl' target='t'>MactheCheeseatl</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=VietNomies&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/VietNomies' target='t'>VietNomies</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SliderUATL&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/SliderUATL' target='t'>SliderUATL</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CheesesteakATL&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CheesesteakATL' target='t'>CheesesteakATL</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NanaGs_&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/NanaGs_' target='t'>NanaGs_</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CaesarTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CaesarTruck' target='t'>CaesarTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Pallookaville&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Pallookaville' target='t'>Pallookaville</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BuenProvechoTrk&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BuenProvechoTrk' target='t'>BuenProvechoTrk</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Spiediezone&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Spiediezone' target='t'>Spiediezone</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TFByrd&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TFByrd' target='t'>TFByrd</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MasalaFresh&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/MasalaFresh' target='t'>MasalaFresh</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Grilldabeast&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Grilldabeast' target='t'>Grilldabeast</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SweetAuburnBBQ&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/SweetAuburnBBQ' target='t'>SweetAuburnBBQ</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ATLFRYGUY&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ATLFRYGUY' target='t'>ATLFRYGUY</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=blaxicanfood&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/blaxicanfood' target='t'>blaxicanfood</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thepuptruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/thepuptruck' target='t'>thepuptruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=honeysuckleatl&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/honeysuckleatl' target='t'>honeysuckleatl</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tasteetruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/tasteetruck' target='t'>tasteetruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Pressedfortimet&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Pressedfortimet' target='t'>Pressedfortimet</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=streateryatl&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/streateryatl' target='t'>streateryatl</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=texstacos&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/texstacos' target='t'>texstacos</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FattysofAtlanta&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/FattysofAtlanta' target='t'>FattysofAtlanta</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PeoplesFoodATL&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PeoplesFoodATL' target='t'>PeoplesFoodATL</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Yumbii&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Yumbii' target='t'>Yumbii</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RollingReubens&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/RollingReubens' target='t'>RollingReubens</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=yolisstreetfood&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/yolisstreetfood' target='t'>yolisstreetfood</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thekingofpops&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/thekingofpops' target='t'>thekingofpops</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=yumyumcupcake&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/yumyumcupcake' target='t'>yumyumcupcake</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoodFoodTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/GoodFoodTruck' target='t'>GoodFoodTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=IbizaBites&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/IbizaBites' target='t'>IbizaBites</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sausagestand&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/sausagestand' target='t'>sausagestand</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WsideCreamery&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/WsideCreamery' target='t'>WsideCreamery</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElBurroPollo&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ElBurroPollo' target='t'>ElBurroPollo</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Omgtaco&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Omgtaco' target='t'>Omgtaco</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheHealthyNut1&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TheHealthyNut1' target='t'>TheHealthyNut1</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Atlanta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DOGSONWHEELS1&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/DOGSONWHEELS1' target='t'>DOGSONWHEELS1</A>
+</div>
+<h2>Augusta, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Augusta] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thebrownbagga&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/thebrownbagga' target='t'>thebrownbagga</A>
+</div>
+<h2>Clarkston, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Clarkston] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tamalequeenATL&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/tamalequeenATL' target='t'>tamalequeenATL</A>
+</div>
+<h2>Decatur, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Decatur] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WowFoodTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/WowFoodTruck' target='t'>WowFoodTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Decatur] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=nectarga&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/nectarga' target='t'>nectarga</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Decatur] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=themobilemarlay&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/themobilemarlay' target='t'>themobilemarlay</A>
+</div>
+<h2>Lilburn, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Lilburn] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ChayJs&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ChayJs' target='t'>ChayJs</A>
+</div>
+<h2>Smyrna, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Smyrna] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=happybellytruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/happybellytruck' target='t'>happybellytruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Smyrna] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=reckledandblue&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/reckledandblue' target='t'>reckledandblue</A>
+</div>
+<h2>Stockbridge, GA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [GA] [Stockbridge] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JustLoafn&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/JustLoafn' target='t'>JustLoafn</A>
+</div>
 </body></html>
