--- a/tweeters-2013-09-15/KS.html
+++ b/tweeters-2013-09-15/KS.html
@@ -44,4 +44,15 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=beautyofbistro&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/beautyofbistro' target='t'>beautyofbistro</A>
 </div>
+<h2>Wichita, KS</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KS] [Wichita] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=letmeatbrats&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/letmeatbrats' target='t'>letmeatbrats</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KS] [Wichita] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=theflyingstove&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/theflyingstove' target='t'>theflyingstove</A>
+</div>
 </body></html>
