--- a/tweeters-2013-09-15/KY.html
+++ b/tweeters-2013-09-15/KY.html
@@ -57,4 +57,24 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HolyMoleTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/HolyMoleTruck' target='t'>HolyMoleTruck</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KY] [Louisville] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BullyDogs&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BullyDogs' target='t'>BullyDogs</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KY] [Louisville] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LilCheezers&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LilCheezers' target='t'>LilCheezers</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KY] [Louisville] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BustaGrill502&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BustaGrill502' target='t'>BustaGrill502</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [KY] [Louisville] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LouisvilleGrind&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LouisvilleGrind' target='t'>LouisvilleGrind</A>
+</div>
 </body></html>
