--- a/tweeters-2013-09-15/LA.html
+++ b/tweeters-2013-09-15/LA.html
@@ -46,4 +46,104 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=curbsidetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/curbsidetruck' target='t'>curbsidetruck</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [Baton Rouge] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dempseysbr&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/dempseysbr' target='t'>dempseysbr</A>
+</div>
+<h2>Jefferson, LA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [Jefferson] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=rue_chow&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/rue_chow' target='t'>rue_chow</A>
+</div>
+<h2>Lafayette, LA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [Lafayette] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=vivalawaffle&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/vivalawaffle' target='t'>vivalawaffle</A>
+</div>
+<h2>New orleans, LA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=frencheezetruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/frencheezetruck' target='t'>frencheezetruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fooddrunknola&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/fooddrunknola' target='t'>fooddrunknola</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TLNola&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TLNola' target='t'>TLNola</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FoodieCallNOLA&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/FoodieCallNOLA' target='t'>FoodieCallNOLA</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CFoodRoamALot&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CFoodRoamALot' target='t'>CFoodRoamALot</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BeignetRoule&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BeignetRoule' target='t'>BeignetRoule</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LaCocinita&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LaCocinita' target='t'>LaCocinita</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SliderShak&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/SliderShak' target='t'>SliderShak</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=nolagirlfood&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/nolagirlfood' target='t'>nolagirlfood</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FatFalafel&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/FatFalafel' target='t'>FatFalafel</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EmpanadaIntifad&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/EmpanadaIntifad' target='t'>EmpanadaIntifad</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BBQNSOME&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BBQNSOME' target='t'>BBQNSOME</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BrigadeCoffee&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BrigadeCoffee' target='t'>BrigadeCoffee</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [New Orleans] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NOLAFOODSTREME&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/NOLAFOODSTREME' target='t'>NOLAFOODSTREME</A>
+</div>
+<h2>Port allen, LA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [Port Allen] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Couyons&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Couyons' target='t'>Couyons</A>
+</div>
+<h2>Shreveport, LA</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [LA] [Shreveport] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=poboyrichgirl&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/poboyrichgirl' target='t'>poboyrichgirl</A>
+</div>
 </body></html>
