--- a/tweeters-2013-09-15/MI.html
+++ b/tweeters-2013-09-15/MI.html
@@ -44,4 +44,101 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=elGuapoGrill&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/elGuapoGrill' target='t'>elGuapoGrill</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Detroit] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ChowCatering&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ChowCatering' target='t'>ChowCatering</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Detroit] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GreenZebraTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/GreenZebraTruck' target='t'>GreenZebraTruck</A>
+</div>
+<h2>East lansing, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [East Lansing] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=eatpurplecarrot&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/eatpurplecarrot' target='t'>eatpurplecarrot</A>
+</div>
+<h2>Ferndale, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Ferndale] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TreatDreams&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TreatDreams' target='t'>TreatDreams</A>
+</div>
+<h2>Grand rapids, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Grand Rapids] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sporkfoodtruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/sporkfoodtruck' target='t'>sporkfoodtruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Grand Rapids] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tacotruckGR&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/tacotruckGR' target='t'>tacotruckGR</A>
+</div>
+<h2>Kalamazoo, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Kalamazoo] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GorillaEATS&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/GorillaEATS' target='t'>GorillaEATS</A>
+</div>
+<h2>Lansing, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Lansing] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElOasisTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ElOasisTruck' target='t'>ElOasisTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Lansing] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TrailerParkd&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TrailerParkd' target='t'>TrailerParkd</A>
+</div>
+<h2>Livonia, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Livonia] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CONCRETECUISINE&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CONCRETECUISINE' target='t'>CONCRETECUISINE</A>
+</div>
+<h2>Madison heights, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Madison Heights] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=macshackmi&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/macshackmi' target='t'>macshackmi</A>
+</div>
+<h2>Pleasant ridge, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Pleasant Ridge] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tacomamadetroit&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/tacomamadetroit' target='t'>tacomamadetroit</A>
+</div>
+<h2>Royal oak, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Royal Oak] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JacquesTacos&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/JacquesTacos' target='t'>JacquesTacos</A>
+</div>
+<h2>St. joseph, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [St. Joseph] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoOrganicGypsy&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/GoOrganicGypsy' target='t'>GoOrganicGypsy</A>
+</div>
+<h2>Traverse, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Traverse] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=eatatginger&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/eatatginger' target='t'>eatatginger</A>
+</div>
+<h2>Traverse city, MI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Traverse City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ezcheesytc&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ezcheesytc' target='t'>ezcheesytc</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [MI] [Traverse City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RoamingHarvest&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/RoamingHarvest' target='t'>RoamingHarvest</A>
+</div>
 </body></html>
