--- a/tweeters-2013-09-15/NJ.html
+++ b/tweeters-2013-09-15/NJ.html
@@ -65,4 +65,106 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=KonaIceNJ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/KonaIceNJ' target='t'>KonaIceNJ</A>
 </div>
+<h2>Hoboken, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hoboken] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheTacoTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TheTacoTruck' target='t'>TheTacoTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hoboken] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mollysmilktruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/mollysmilktruck' target='t'>mollysmilktruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hoboken] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Aroy_d&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Aroy_d' target='t'>Aroy_d</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hoboken] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=burgerboxtruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/burgerboxtruck' target='t'>burgerboxtruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hoboken] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=AmandaBananasNJ&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/AmandaBananasNJ' target='t'>AmandaBananasNJ</A>
+</div>
+<h2>Hopewell, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Hopewell] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NOMADPIZZA&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/NOMADPIZZA' target='t'>NOMADPIZZA</A>
+</div>
+<h2>Jamesburg, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Jamesburg] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ahhlacart&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ahhlacart' target='t'>ahhlacart</A>
+</div>
+<h2>Jersey city, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Jersey City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Burgerissimo&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Burgerissimo' target='t'>Burgerissimo</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Jersey City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LaSonrisaFoods&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LaSonrisaFoods' target='t'>LaSonrisaFoods</A>
+</div>
+<h2>Montclair, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Montclair] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=hungerconstruct&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/hungerconstruct' target='t'>hungerconstruct</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Montclair] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TFQfoodtruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TFQfoodtruck' target='t'>TFQfoodtruck</A>
+</div>
+<h2>New brunswick, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [New Brunswick] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=VeganLunchTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/VeganLunchTruck' target='t'>VeganLunchTruck</A>
+</div>
+<h2>Newark, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Newark] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=taqueriAutentic&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/taqueriAutentic' target='t'>taqueriAutentic</A>
+</div>
+<h2>Old bridge, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Old Bridge] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheEmpExpress&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/TheEmpExpress' target='t'>TheEmpExpress</A>
+</div>
+<h2>Secaucas, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Secaucas] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mausamnyc&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/mausamnyc' target='t'>mausamnyc</A>
+</div>
+<h2>Somerset, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Somerset] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=oinkandmoobbq&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/oinkandmoobbq' target='t'>oinkandmoobbq</A>
+</div>
+<h2>Summit, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Summit] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PVPIZZATRUCK&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PVPIZZATRUCK' target='t'>PVPIZZATRUCK</A>
+</div>
+<h2>Woodbridge, NJ</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [NJ] [Woodbridge] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=empanadaguy1&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/empanadaguy1' target='t'>empanadaguy1</A>
+</div>
 </body></html>
