--- a/tweeters-2013-09-15/OK.html
+++ b/tweeters-2013-09-15/OK.html
@@ -54,4 +54,77 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bigtrucktacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bigtrucktacos' target='t'>bigtrucktacos</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CrepeBrewers&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CrepeBrewers' target='t'>CrepeBrewers</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=IceCreamOKC&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/IceCreamOKC' target='t'>IceCreamOKC</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wafflechampion&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/wafflechampion' target='t'>wafflechampion</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HeosKitchen&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/HeosKitchen' target='t'>HeosKitchen</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=momentum_dining&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/momentum_dining' target='t'>momentum_dining</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PuertoRIco2Go&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PuertoRIco2Go' target='t'>PuertoRIco2Go</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Oklahoma City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Moto_Chef_&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Moto_Chef_' target='t'>Moto_Chef_</A>
+</div>
+<h2>Stillwater, OK</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Stillwater] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=purdyqbbq&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/purdyqbbq' target='t'>purdyqbbq</A>
+</div>
+<h2>Tulsa, OK</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Tulsa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EatMikesBBQ&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/EatMikesBBQ' target='t'>EatMikesBBQ</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Tulsa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LegrubsCatering&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LegrubsCatering' target='t'>LegrubsCatering</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Tulsa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MangiamoTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/MangiamoTruck' target='t'>MangiamoTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Tulsa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElGringoLocoLLC&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ElGringoLocoLLC' target='t'>ElGringoLocoLLC</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Tulsa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=doghousetulsa&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/doghousetulsa' target='t'>doghousetulsa</A>
+</div>
+<h2>Yukon, OK</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [OK] [Yukon] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WildAls&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/WildAls' target='t'>WildAls</A>
+</div>
 </body></html>
