--- a/tweeters-2013-09-15/RI.html
+++ b/tweeters-2013-09-15/RI.html
@@ -64,4 +64,177 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MootzaDeli&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MootzaDeli' target='t'>MootzaDeli</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=rockettruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/rockettruck' target='t'>rockettruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PTacosMobile&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PTacosMobile' target='t'>PTacosMobile</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=whereisradish&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/whereisradish' target='t'>whereisradish</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=joedegacoffee&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/joedegacoffee' target='t'>joedegacoffee</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ShuckinTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ShuckinTruck' target='t'>ShuckinTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=pocolocotacos&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/pocolocotacos' target='t'>pocolocotacos</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PORTU_GALO&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PORTU_GALO' target='t'>PORTU_GALO</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LazymanLobster&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LazymanLobster' target='t'>LazymanLobster</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=paninoexpress&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/paninoexpress' target='t'>paninoexpress</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ChampMelt&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ChampMelt' target='t'>ChampMelt</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LikeNoUdder&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LikeNoUdder' target='t'>LikeNoUdder</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DadsDugout&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/DadsDugout' target='t'>DadsDugout</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fancheezical&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/fancheezical' target='t'>fancheezical</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sugarushtruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/sugarushtruck' target='t'>sugarushtruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ljsbbq&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ljsbbq' target='t'>ljsbbq</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LittleBillys&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LittleBillys' target='t'>LittleBillys</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PVDpops&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PVDpops' target='t'>PVDpops</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RhodiesFoodTrk&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/RhodiesFoodTrk' target='t'>RhodiesFoodTrk</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=chezpascal&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/chezpascal' target='t'>chezpascal</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FugoFoodTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/FugoFoodTruck' target='t'>FugoFoodTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FlourGirlsTreat&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/FlourGirlsTreat' target='t'>FlourGirlsTreat</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=nobleknots&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/nobleknots' target='t'>nobleknots</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=angelos_ri&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/angelos_ri' target='t'>angelos_ri</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DelsLemonade&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/DelsLemonade' target='t'>DelsLemonade</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ploufplouftruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ploufplouftruck' target='t'>ploufplouftruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=lotuspepper&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/lotuspepper' target='t'>lotuspepper</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CJammersTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CJammersTruck' target='t'>CJammersTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PrestoStrangeO&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PrestoStrangeO' target='t'>PrestoStrangeO</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MijosTacos&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/MijosTacos' target='t'>MijosTacos</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=juliansomnibus&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/juliansomnibus' target='t'>juliansomnibus</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Providence] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MamaKimsKbbq&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/MamaKimsKbbq' target='t'>MamaKimsKbbq</A>
+</div>
+<h2>South kingstown, RI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [South Kingstown] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PizzaByFire_RI&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PizzaByFire_RI' target='t'>PizzaByFire_RI</A>
+</div>
+<h2>Wakefield, RI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Wakefield] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoSpressoRI&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/GoSpressoRI' target='t'>GoSpressoRI</A>
+</div>
+<h2>Warwick, RI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [RI] [Warwick] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ProvidencePotat&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ProvidencePotat' target='t'>ProvidencePotat</A>
+</div>
 </body></html>
