--- a/tweeters-2013-09-15/UT.html
+++ b/tweeters-2013-09-15/UT.html
@@ -61,4 +61,35 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WakiPakiFood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/WakiPakiFood' target='t'>WakiPakiFood</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Salt Lake City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=surefirepizza&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/surefirepizza' target='t'>surefirepizza</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Salt Lake City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Chowtruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/Chowtruck' target='t'>Chowtruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Salt Lake City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=submarinostruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/submarinostruck' target='t'>submarinostruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Salt Lake City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=OffTheGridSLC&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/OffTheGridSLC' target='t'>OffTheGridSLC</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Salt Lake City] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BetterBurgerUT&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/BetterBurgerUT' target='t'>BetterBurgerUT</A>
+</div>
+<h2>Smithfield, UT</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [UT] [Smithfield] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=StreetEatsUtah&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/StreetEatsUtah' target='t'>StreetEatsUtah</A>
+</div>
 </body></html>
