--- a/tweeters-2013-09-15/WI.html
+++ b/tweeters-2013-09-15/WI.html
@@ -58,4 +58,75 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RaffysMadison&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RaffysMadison' target='t'>RaffysMadison</A>
 </div>
+<h2>Milwaukee, WI</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CHUBBYCHEESETRK&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/CHUBBYCHEESETRK' target='t'>CHUBBYCHEESETRK</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=americaneuros&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/americaneuros' target='t'>americaneuros</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=jeppajoes&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/jeppajoes' target='t'>jeppajoes</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tigerbitetruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/tigerbitetruck' target='t'>tigerbitetruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bunmemke&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/bunmemke' target='t'>bunmemke</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=streetzapizza&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/streetzapizza' target='t'>streetzapizza</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PitaBros&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/PitaBros' target='t'>PitaBros</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HauteTacoTruck&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/HauteTacoTruck' target='t'>HauteTacoTruck</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=satellitecrepes&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/satellitecrepes' target='t'>satellitecrepes</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RedTruckSliders&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/RedTruckSliders' target='t'>RedTruckSliders</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=THEHARDWOODCAFE&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/THEHARDWOODCAFE' target='t'>THEHARDWOODCAFE</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SimmerMKE&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/SimmerMKE' target='t'>SimmerMKE</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fastfoodiemke&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/fastfoodiemke' target='t'>fastfoodiemke</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [WI] [Milwaukee] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=rollmke&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/rollmke' target='t'>rollmke</A>
+</div>
 </body></html>
