--- a/tweeters-2013-09-15/ID.html
+++ b/tweeters-2013-09-15/ID.html
@@ -47,4 +47,16 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=boisesoulfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/boisesoulfood' target='t'>boisesoulfood</A>
 </div>
+<h2>Meridian, ID</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [ID] [Meridian] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ACupcakeParadis&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/ACupcakeParadis' target='t'>ACupcakeParadis</A>
+</div>
+<h2>Nampa, ID</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [ID] [Nampa] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=B29Streatery&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/B29Streatery' target='t'>B29Streatery</A>
+</div>
 </body></html>
