--- a/tweeters-2013-09-15/ME.html
+++ b/tweeters-2013-09-15/ME.html
@@ -45,4 +45,20 @@
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wickedgoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/wickedgoodtruck' target='t'>wickedgoodtruck</A>
 </div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [ME] [Portland] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=corazontweet&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/corazontweet' target='t'>corazontweet</A>
+</div>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [ME] [Portland] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LoveCupcakesME&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/LoveCupcakesME' target='t'>LoveCupcakesME</A>
+</div>
+<h2>Scarborough, ME</h2>
+<div style='height:24px;line-height:24px; font-size: 16px'>
+  [ME] [Scarborough] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mainelyburgers&show_count=true&show_screen_name=true'></iframe>
+  - <A href='http://www.twitter.com/mainelyburgers' target='t'>mainelyburgers</A>
+</div>
 </body></html>
